v0.9 智能导诊由prompt注入改为sql查询